--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,15 @@
 # import from dockerhub of cuda base
-FROM nvidia/cuda:11.4.0-runtime-centos7
+FROM nvidia/cuda:11.6.0-cudnn8-runtime-centos7
 
 # Maintainer label
 LABEL maintainer="Raffaele Gerosa <rgerosa@ucsd.edu>"
+
+# install git, openssh, rsync, emacs and tmux
+RUN yum -y install git
+RUN yum -y install rsync
+RUN yum -y install openssh
+RUN yum -y install emacs
+RUN yum -y install tmux
 
 # Copy the Miniconda3 file that needs to be periodically updated
 RUN curl -LJO https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  
@@ -19,11 +26,11 @@ RUN conda update -n base -c defaults conda
 # Install mamba
 RUN conda install -y mamba -c conda-forge
 
-# Create the environment for weaver: first thing take out the torch cu113 specifics cause are not in the base pip package
+# Create the environment for weaver: first thing take out the torch cu116 specifics cause are not in the base pip package
 COPY weaver-environment.yaml .
-RUN sed -i "s/- torch==1.11.0+cu113//g"  weaver-environment.yaml
-RUN sed -i "s/- torchaudio==0.11.0+cu113//g"  weaver-environment.yaml
-RUN sed -i "s/- torchvision==0.12.0+cu113//g"  weaver-environment.yaml
+RUN sed -i "s/- torch==1.12.0+cu116//g"  weaver-environment.yaml
+RUN sed -i "s/- torchaudio==0.12.0+cu116//g"  weaver-environment.yaml
+RUN sed -i "s/- torchvision==0.13.0+cu116//g"  weaver-environment.yaml
 RUN conda env create -f weaver-environment.yaml
 
 # Initialize conda bash config
@@ -33,4 +40,4 @@ RUN conda init bash
 SHELL ["conda", "run", "-n", "weaver", "/bin/bash", "-c"]
 
 # Install torch by hand
-RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116
