new version of domain adaptation, missing onnx eval

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,11 +5,14 @@ FROM nvidia/cuda:11.6.0-cudnn8-runtime-centos7
 LABEL maintainer="Raffaele Gerosa <rgerosa@ucsd.edu>"
 
 # install git, openssh, rsync, emacs and tmux
+RUN yum -y install epel-release
+RUN yum -y repolist
 RUN yum -y install git
 RUN yum -y install rsync
-RUN yum -y install openssh
-RUN yum -y install emacs
 RUN yum -y install tmux
+RUN yum -y install openssh
+RUN yum -y install krb5-workstation krb5-libs kstart krb5-server
+RUN yum -y install emacs
 
 # Copy the Miniconda3 file that needs to be periodically updated
 RUN curl -LJO https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  
@@ -28,16 +31,16 @@ RUN conda install -y mamba -c conda-forge
 
 # Create the environment for weaver: first thing take out the torch cu116 specifics cause are not in the base pip package
 COPY weaver-environment.yaml .
-RUN sed -i "s/- torch==1.12.0+cu116//g"  weaver-environment.yaml
-RUN sed -i "s/- torchaudio==0.12.0+cu116//g"  weaver-environment.yaml
-RUN sed -i "s/- torchvision==0.13.0+cu116//g"  weaver-environment.yaml
+COPY weaver-environment.yaml .
 RUN conda env create -f weaver-environment.yaml
 
 # Initialize conda bash config
 RUN conda init bash
 
+# add ssh config and kerberos
+COPY files/ssh_config /etc/ssh/
+COPY files/krb5.conf /etc/
+
 # Make RUN commands use the new environment:
 SHELL ["conda", "run", "-n", "weaver", "/bin/bash", "-c"]
 
-# Install torch by hand
-RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116
