--- a/docker/weaver-environment.yaml
+++ b/docker/weaver-environment.yaml
@@ -1,87 +1,108 @@
 name: weaver
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2022.4.26=h06a4308_0
-  - certifi=2022.6.15=py39h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - ncurses=6.3=h5eee18b_3
-  - openssl=1.1.1p=h5eee18b_0
-  - pip=21.2.4=py39h06a4308_0
-  - python=3.9.12=h12debd9_1
-  - readline=8.1.2=h7f8727e_1
-  - setuptools=61.2.0=py39h06a4308_0
-  - sqlite=3.38.5=hc218d9a_0
-  - tk=8.6.12=h1ccaba5_0
-  - tzdata=2022a=hda174b7_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7f8727e_1
-  - zlib=1.2.12=h7f8727e_2
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2022.12.7=ha878542_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - kubernetes=1.24.3=ha770c72_0
+  - kubernetes-client=1.24.3=h889fc20_0
+  - kubernetes-node=1.24.3=h889fc20_0
+  - kubernetes-server=1.24.3=h889fc20_0
+  - ld_impl_linux-64=2.39=hcc3a1bd_1
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=12.2.0=h65d4601_19
+  - libgomp=12.2.0=h65d4601_19
+  - libnsl=2.0.0=h7f98852_0
+  - libsqlite=3.40.0=h753d276_0
+  - libstdcxx-ng=12.2.0=h46fd767_19
+  - libuuid=2.32.1=h7f98852_1000
+  - libzlib=1.2.13=h166bdaf_4
+  - ncurses=6.3=h27087fc_1
+  - openssl=3.0.7=h0b41bf4_1
+  - pip=22.3.1=pyhd8ed1ab_0
+  - python=3.9.15=hba424b6_0_cpython
+  - readline=8.1.2=h0f457ee_0
+  - setuptools=66.0.0=pyhd8ed1ab_0
+  - sqlite=3.40.0=h4ff8645_0
+  - tk=8.6.12=h27826a3_0
+  - tzdata=2022g=h191b570_0
+  - wheel=0.38.4=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
+  - zlib=1.2.13=h166bdaf_4
   - pip:
-    - absl-py==1.1.0
-    - awkward==1.8.0
-    - awkward0==0.15.5
-    - cachetools==5.2.0
-    - charset-normalizer==2.1.0
-    - coloredlogs==15.0.1
-    - cycler==0.11.0
-    - flatbuffers==2.0
-    - fonttools==4.33.3
-    - google-auth==2.9.0
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.47.0
-    - humanfriendly==10.0
-    - idna==3.3
-    - importlib-metadata==4.12.0
-    - joblib==1.1.0
-    - kiwisolver==1.4.3
-    - lz4==4.0.1
-    - markdown==3.3.7
-    - matplotlib==3.5.2
-    - mpmath==1.2.1
-    - numexpr==2.8.3
-    - numpy==1.23.0
-    - oauthlib==3.2.0
-    - onnx==1.12.0
-    - onnxruntime==1.12.1
-    - onnxruntime-gpu==1.11.1
-    - packaging==21.3
-    - pandas==1.4.3
-    - pillow==9.2.0
-    - protobuf==3.19.4
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pyparsing==3.0.9
-    - python-dateutil==2.8.2
-    - pytz==2022.1
-    - pyyaml==6.0
-    - requests==2.28.1
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - scikit-learn==1.1.1
-    - scipy==1.8.1
-    - six==1.16.0
-    - sympy==1.11.1
-    - tables==3.7.0
-    - tensorboard==2.9.1
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - threadpoolctl==3.1.0
-    - torch==1.12.0+cu116
-    - torchaudio==0.12.0+cu116
-    - torchvision==0.13.0+cu116
-    - tqdm==4.64.0
-    - typing-extensions==4.3.0
-    - uproot==4.3.3
-    - urllib3==1.26.9
-    - vector==0.8.5
-    - werkzeug==2.1.2
-    - xxhash==3.0.0
-    - zipp==3.8.0
+      - absl-py==1.4.0
+      - awkward==2.0.6
+      - awkward-cpp==7
+      - awkward0==0.15.5
+      - beautifulsoup4==4.11.1
+      - blosc2==2.0.0
+      - cachetools==5.2.1
+      - charset-normalizer==3.0.1
+      - coloredlogs==15.0.1
+      - contourpy==1.0.7
+      - cycler==0.11.0
+      - cython==0.29.33
+      - flatbuffers==23.1.4
+      - fonttools==4.38.0
+      - google-auth==2.16.0
+      - google-auth-oauthlib==0.4.6
+      - grpcio==1.51.1
+      - humanfriendly==10.0
+      - idna==3.4
+      - importlib-metadata==6.0.0
+      - joblib==1.2.0
+      - kiwisolver==1.4.4
+      - lz4==4.3.2
+      - markdown==3.4.1
+      - markupsafe==2.1.2
+      - matplotlib==3.6.3
+      - mpmath==1.2.1
+      - msgpack==1.0.4
+      - numexpr==2.8.4
+      - numpy==1.24.1
+      - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cuda-nvrtc-cu11==11.7.99
+      - nvidia-cuda-runtime-cu11==11.7.99
+      - nvidia-cudnn-cu11==8.5.0.96
+      - oauthlib==3.2.2
+      - onnxruntime-gpu==1.13.1
+      - packaging==23.0
+      - pandas==1.5.3
+      - pillow==9.4.0
+      - protobuf==3.20.3
+      - py-cpuinfo==9.0.0
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pyparsing==3.0.9
+      - python-dateutil==2.8.2
+      - pytz==2022.7.1
+      - pyyaml==6.0
+      - requests==2.28.2
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
+      - scikit-learn==1.2.0
+      - scipy==1.10.0
+      - six==1.16.0
+      - soupsieve==2.3.2.post1
+      - sympy==1.11.1
+      - tables==3.8.0
+      - tensorboard==2.11.2
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.1
+      - threadpoolctl==3.1.0
+      - torch==1.13.1
+      - torchaudio==0.13.1
+      - torchvision==0.14.1
+      - tqdm==4.64.1
+      - typing-extensions==4.4.0
+      - uproot==5.0.2
+      - urllib3==1.26.14
+      - vector==0.11.0
+      - werkzeug==2.2.2
+      - xxhash==3.2.0
+      - zipp==3.11.0
 prefix: /afs/cern.ch/work/r/rgerosa/miniconda3/envs/weaver
