--- a/docker/weaver-environment.yaml
+++ b/docker/weaver-environment.yaml
@@ -1,108 +1,110 @@
 name: weaver
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.12.7=ha878542_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - kubernetes=1.24.3=ha770c72_0
-  - kubernetes-client=1.24.3=h889fc20_0
-  - kubernetes-node=1.24.3=h889fc20_0
-  - kubernetes-server=1.24.3=h889fc20_0
-  - ld_impl_linux-64=2.39=hcc3a1bd_1
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgomp=12.2.0=h65d4601_19
-  - libnsl=2.0.0=h7f98852_0
-  - libsqlite=3.40.0=h753d276_0
-  - libstdcxx-ng=12.2.0=h46fd767_19
-  - libuuid=2.32.1=h7f98852_1000
-  - libzlib=1.2.13=h166bdaf_4
-  - ncurses=6.3=h27087fc_1
-  - openssl=3.0.7=h0b41bf4_1
-  - pip=22.3.1=pyhd8ed1ab_0
-  - python=3.9.15=hba424b6_0_cpython
-  - readline=8.1.2=h0f457ee_0
-  - setuptools=66.0.0=pyhd8ed1ab_0
-  - sqlite=3.40.0=h4ff8645_0
-  - tk=8.6.12=h27826a3_0
-  - tzdata=2022g=h191b570_0
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - zlib=1.2.13=h166bdaf_4
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2023.05.30=h06a4308_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgomp=11.2.0=h1234567_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libuuid=1.41.5=h5eee18b_0
+  - ncurses=6.4=h6a678d5_0
+  - openssl=3.0.8=h7f8727e_0
+  - pip=23.0.1=py310h06a4308_0
+  - python=3.10.11=h955ad1f_3
+  - readline=8.2=h5eee18b_0
+  - setuptools=67.8.0=py310h06a4308_0
+  - sqlite=3.41.2=h5eee18b_0
+  - tk=8.6.12=h1ccaba5_0
+  - wheel=0.38.4=py310h06a4308_0
+  - xz=5.4.2=h5eee18b_0
+  - zlib=1.2.13=h5eee18b_0
   - pip:
       - absl-py==1.4.0
-      - awkward==2.0.6
-      - awkward-cpp==7
+      - awkward==2.2.2
+      - awkward-cpp==16
       - awkward0==0.15.5
-      - beautifulsoup4==4.11.1
+      - beautifulsoup4==4.12.2
       - blosc2==2.0.0
-      - cachetools==5.2.1
-      - charset-normalizer==3.0.1
+      - cachetools==5.3.1
+      - certifi==2023.5.7
+      - charset-normalizer==3.1.0
+      - cmake==3.26.4
       - coloredlogs==15.0.1
       - contourpy==1.0.7
       - cycler==0.11.0
-      - cython==0.29.33
-      - flatbuffers==23.1.4
-      - fonttools==4.38.0
-      - google-auth==2.16.0
-      - google-auth-oauthlib==0.4.6
-      - grpcio==1.51.1
+      - cython==0.29.35
+      - filelock==3.12.1
+      - flatbuffers==23.5.26
+      - fonttools==4.39.4
+      - fsspec==2023.4.0
+      - google-auth==2.19.1
+      - google-auth-oauthlib==1.0.0
+      - grpcio==1.54.2
       - humanfriendly==10.0
       - idna==3.4
-      - importlib-metadata==6.0.0
+      - jinja2==3.1.2
       - joblib==1.2.0
       - kiwisolver==1.4.4
+      - lit==16.0.5.post0
       - lz4==4.3.2
-      - markdown==3.4.1
-      - markupsafe==2.1.2
-      - matplotlib==3.6.3
-      - mpmath==1.2.1
-      - msgpack==1.0.4
+      - markdown==3.4.3
+      - markupsafe==2.1.3
+      - matplotlib==3.7.1
+      - mpmath==1.3.0
+      - msgpack==1.0.5
+      - networkx==3.1
       - numexpr==2.8.4
-      - numpy==1.24.1
+      - numpy==1.24.3
       - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cuda-cupti-cu11==11.7.101
       - nvidia-cuda-nvrtc-cu11==11.7.99
       - nvidia-cuda-runtime-cu11==11.7.99
       - nvidia-cudnn-cu11==8.5.0.96
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-curand-cu11==10.2.10.91
+      - nvidia-cusolver-cu11==11.4.0.1
+      - nvidia-cusparse-cu11==11.7.4.91
+      - nvidia-nccl-cu11==2.14.3
+      - nvidia-nvtx-cu11==11.7.91
       - oauthlib==3.2.2
-      - onnxruntime-gpu==1.13.1
-      - packaging==23.0
-      - pandas==1.5.3
-      - pillow==9.4.0
-      - protobuf==3.20.3
+      - onnx==1.14.0
+      - onnxruntime==1.15.0
+      - onnxruntime-gpu==1.15.0
+      - packaging==23.1
+      - pandas==2.0.2
+      - pillow==9.5.0
+      - protobuf==4.23.2
       - py-cpuinfo==9.0.0
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
-      - pytz==2022.7.1
+      - pytz==2023.3
       - pyyaml==6.0
-      - requests==2.28.2
+      - requests==2.31.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
-      - scikit-learn==1.2.0
-      - scipy==1.10.0
+      - scikit-learn==1.2.2
+      - scipy==1.10.1
       - six==1.16.0
-      - soupsieve==2.3.2.post1
-      - sympy==1.11.1
+      - soupsieve==2.4.1
+      - sympy==1.12
       - tables==3.8.0
-      - tensorboard==2.11.2
-      - tensorboard-data-server==0.6.1
-      - tensorboard-plugin-wit==1.8.1
+      - tensorboard==2.13.0
+      - tensorboard-data-server==0.7.0
       - threadpoolctl==3.1.0
-      - torch==1.13.1
-      - torchaudio==0.13.1
-      - torchvision==0.14.1
-      - tqdm==4.64.1
-      - typing-extensions==4.4.0
-      - uproot==5.0.2
-      - urllib3==1.26.14
-      - vector==0.11.0
-      - werkzeug==2.2.2
+      - tqdm==4.65.0
+      - triton==2.0.0
+      - typing-extensions==4.6.3
+      - tzdata==2023.3
+      - uproot==5.0.8
+      - urllib3==1.26.16
+      - vector==1.0.0
+      - werkzeug==2.3.6
       - xxhash==3.2.0
-      - zipp==3.11.0
-prefix: /afs/cern.ch/work/r/rgerosa/miniconda3/envs/weaver
+prefix: /afs/cern.ch/user/r/rgerosa/work/miniconda3/envs/weaver
