--- a/docker/weaver-environment.yaml
+++ b/docker/weaver-environment.yaml
@@ -5,7 +5,7 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.05.30=h06a4308_0
+  - ca-certificates=2023.08.22=h06a4308_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
@@ -13,98 +13,88 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.8=h7f8727e_0
-  - pip=23.0.1=py310h06a4308_0
-  - python=3.10.11=h955ad1f_3
+  - openssl=3.0.12=h7f8727e_0
+  - pip=23.3.1=py311h06a4308_0
+  - python=3.11.5=h955ad1f_0
   - readline=8.2=h5eee18b_0
-  - setuptools=67.8.0=py310h06a4308_0
+  - setuptools=68.0.0=py311h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - wheel=0.38.4=py310h06a4308_0
+  - tzdata=2023c=h04d1e81_0
+  - wheel=0.41.2=py311h06a4308_0
   - xz=5.4.2=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
-      - absl-py==1.4.0
-      - awkward==2.2.2
-      - awkward-cpp==16
+      - absl-py==2.0.0
+      - awkward==2.5.0
+      - awkward-cpp==26
       - awkward0==0.15.5
       - beautifulsoup4==4.12.2
-      - blosc2==2.0.0
-      - cachetools==5.3.1
-      - certifi==2023.5.7
-      - charset-normalizer==3.1.0
-      - cmake==3.26.4
+      - blosc2==2.3.1
+      - cachetools==5.3.2
+      - certifi==2023.11.17
+      - charset-normalizer==3.3.2
       - coloredlogs==15.0.1
-      - contourpy==1.0.7
-      - cycler==0.11.0
-      - cython==0.29.35
-      - filelock==3.12.1
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - filelock==3.9.0
       - flatbuffers==23.5.26
-      - fonttools==4.39.4
+      - fonttools==4.45.1
       - fsspec==2023.4.0
-      - google-auth==2.19.1
-      - google-auth-oauthlib==1.0.0
-      - grpcio==1.54.2
+      - google-auth==2.23.4
+      - google-auth-oauthlib==1.1.0
+      - grpcio==1.59.3
       - humanfriendly==10.0
-      - idna==3.4
+      - idna==3.6
+      - importlib-metadata==6.8.0
       - jinja2==3.1.2
-      - joblib==1.2.0
-      - kiwisolver==1.4.4
-      - lit==16.0.5.post0
+      - joblib==1.3.2
+      - kiwisolver==1.4.5
       - lz4==4.3.2
-      - markdown==3.4.3
+      - markdown==3.5.1
       - markupsafe==2.1.3
-      - matplotlib==3.7.1
+      - matplotlib==3.8.2
       - mpmath==1.3.0
-      - msgpack==1.0.5
-      - networkx==3.1
-      - numexpr==2.8.4
-      - numpy==1.24.3
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nvtx-cu11==11.7.91
+      - msgpack==1.0.7
+      - ndindex==1.7
+      - networkx==3.0
+      - numexpr==2.8.7
+      - numpy==1.26.2
       - oauthlib==3.2.2
-      - onnx==1.14.0
-      - onnxruntime==1.15.0
-      - onnxruntime-gpu==1.15.0
-      - packaging==23.1
-      - pandas==2.0.2
-      - pillow==9.5.0
-      - protobuf==4.23.2
+      - onnx==1.15.0
+      - onnxruntime==1.16.3
+      - onnxruntime-gpu==1.16.3
+      - packaging==23.2
+      - pillow==10.1.0
+      - protobuf==4.23.4
       - py-cpuinfo==9.0.0
-      - pyasn1==0.5.0
+      - pyasn1==0.5.1
       - pyasn1-modules==0.3.0
-      - pyparsing==3.0.9
+      - pyparsing==3.1.1
       - python-dateutil==2.8.2
-      - pytz==2023.3
-      - pyyaml==6.0
+      - pyyaml==6.0.1
       - requests==2.31.0
       - requests-oauthlib==1.3.1
       - rsa==4.9
-      - scikit-learn==1.2.2
-      - scipy==1.10.1
+      - scikit-learn==1.3.2
+      - scipy==1.11.4
       - six==1.16.0
-      - soupsieve==2.4.1
+      - soupsieve==2.5
       - sympy==1.12
-      - tables==3.8.0
-      - tensorboard==2.13.0
-      - tensorboard-data-server==0.7.0
-      - threadpoolctl==3.1.0
-      - tqdm==4.65.0
-      - triton==2.0.0
-      - typing-extensions==4.6.3
-      - tzdata==2023.3
-      - uproot==5.0.8
-      - urllib3==1.26.16
-      - vector==1.0.0
-      - werkzeug==2.3.6
-      - xxhash==3.2.0
-prefix: /afs/cern.ch/user/r/rgerosa/work/miniconda3/envs/weaver
+      - tables==3.9.2
+      - tensorboard==2.15.1
+      - tensorboard-data-server==0.7.2
+      - threadpoolctl==3.2.0
+      - torch==2.1.1+cu118
+      - torchaudio==2.1.1+cu118
+      - torchvision==0.16.1+cu118
+      - tqdm==4.66.1
+      - triton==2.1.0
+      - typing-extensions==4.4.0
+      - uproot==5.1.2
+      - urllib3==2.1.0
+      - vector==1.1.1.post1
+      - werkzeug==3.0.1
+      - xxhash==3.4.1
+      - zipp==3.17.0
+prefix: /afs/cern.ch/work/r/rgerosa/miniconda3/envs/weaver
